# AI-Data-Analyst

./: LICENSE  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: App.js
